--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Vanix Esports</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #0b0b0b;
+      color: white;
+      text-align: center;
+    }
+    header {
+      padding: 40px;
+      background: linear-gradient(90deg, #6a00ff, #00d4ff);
+    }
+    section {
+      padding: 40px;
+    }
+    a {
+      color: #00d4ff;
+      text-decoration: none;
+      margin: 10px;
+      display: inline-block;
+    }
+  </style>
+</head>
+<body>
+
+<header>
+  <h1>VANIX ESPORTS</h1>
+  <p>Built to Dominate</p>
+</header>
+
+<section>
+  <h2>About Us</h2>
+  <p>Vanix is a competitive esports organization focused on winning and building elite players.</p>
+</section>
+
+<section>
+  <h2>Follow Us</h2>
+  <a href="#">Twitter</a>
+  <a href="#">Discord</a>
+  <a href="#">YouTube</a>
+</section>
+
+</body>
+</html>
 
